// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`c-collapse-panel Renders \`c-collapse-panel\` with custom props 1`] = `
<div
  class="c-collapse-panel elevation-2 v-item-group theme--light v-expansion-panels v-expansion-panels--accordion"
>
  <div
    aria-expanded="false"
    class="v-expansion-panel c-collapse-panel__panel"
  >
    <button
      class="v-expansion-panel-header grey"
      type="button"
    >
      <span
        class="white--text"
      />
      <transition-stub
        name="fade-transition"
      >
        <div
          class="v-expansion-panel-header__icon"
        >
          <i
            aria-hidden="true"
            class="v-icon notranslate material-icons theme--light white--text"
          >
            custom_icon
          </i>
        </div>
      </transition-stub>
    </button>
    <transition-stub
      name="expand-transition"
      style="background-color: grey;"
    >
      <div
        class="v-expansion-panel-content"
        style="display: none;"
      >
        <div
          class="v-expansion-panel-content__wrap"
        >
          <div
            class="c-collapse-panel__card v-card v-card--flat v-sheet theme--light"
          >
            <div
              class="v-card__text"
            />
          </div>
        </div>
      </div>
    </transition-stub>
  </div>
</div>
`;

exports[`c-collapse-panel Renders \`c-collapse-panel\` with custom title 1`] = `
<div
  class="c-collapse-panel elevation-2 v-item-group theme--light v-expansion-panels v-expansion-panels--accordion"
>
  <div
    aria-expanded="false"
    class="v-expansion-panel c-collapse-panel__panel"
  >
    <button
      class="v-expansion-panel-header"
      style="background-color: rgb(128, 128, 128); border-color: rgb(128, 128, 128);"
      type="button"
    >
      <span
        class="white--text"
      >
        Custom title
      </span>
      <transition-stub
        name="fade-transition"
      >
        <div
          class="v-expansion-panel-header__icon"
        >
          <i
            aria-hidden="true"
            class="v-icon notranslate material-icons theme--light white--text"
          >
            keyboard_arrow_down
          </i>
        </div>
      </transition-stub>
    </button>
    <transition-stub
      name="expand-transition"
      style="background-color: rgb(128, 128, 128);"
    >
      <div
        class="v-expansion-panel-content"
        style="display: none;"
      >
        <div
          class="v-expansion-panel-content__wrap"
        >
          <div
            class="c-collapse-panel__card v-card v-card--flat v-sheet theme--light"
          >
            <div
              class="v-card__text"
            />
          </div>
        </div>
      </div>
    </transition-stub>
  </div>
</div>
`;

exports[`c-collapse-panel Renders \`c-collapse-panel\` with default props 1`] = `
<div
  class="c-collapse-panel elevation-2 v-item-group theme--light v-expansion-panels v-expansion-panels--accordion"
>
  <div
    aria-expanded="false"
    class="v-expansion-panel c-collapse-panel__panel"
  >
    <button
      class="v-expansion-panel-header"
      style="background-color: rgb(128, 128, 128); border-color: rgb(128, 128, 128);"
      type="button"
    >
      <span
        class="white--text"
      />
      <transition-stub
        name="fade-transition"
      >
        <div
          class="v-expansion-panel-header__icon"
        >
          <i
            aria-hidden="true"
            class="v-icon notranslate material-icons theme--light white--text"
          >
            keyboard_arrow_down
          </i>
        </div>
      </transition-stub>
    </button>
    <transition-stub
      name="expand-transition"
      style="background-color: rgb(128, 128, 128);"
    >
      <div
        class="v-expansion-panel-content"
        style="display: none;"
      >
        <div
          class="v-expansion-panel-content__wrap"
        >
          <div
            class="c-collapse-panel__card v-card v-card--flat v-sheet theme--light"
          >
            <div
              class="v-card__text"
            />
          </div>
        </div>
      </div>
    </transition-stub>
  </div>
</div>
`;

exports[`c-collapse-panel Renders \`c-collapse-panel\` with errors 1`] = `
<div
  class="c-collapse-panel elevation-2 v-item-group theme--light v-expansion-panels v-expansion-panels--accordion"
>
  <div
    aria-expanded="false"
    class="v-expansion-panel c-collapse-panel__panel"
  >
    <button
      class="v-expansion-panel-header error"
      style=""
      type="button"
    >
      <span
        class="white--text"
      >
        Custom title with errors
      </span>
      <transition-stub
        name="fade-transition"
      >
        <div
          class="v-expansion-panel-header__icon"
        >
          <i
            aria-hidden="true"
            class="v-icon notranslate material-icons theme--light white--text"
          >
            keyboard_arrow_down
          </i>
        </div>
      </transition-stub>
    </button>
    <transition-stub
      name="expand-transition"
      style="background-color: rgb(128, 128, 128);"
    >
      <div
        class="v-expansion-panel-content"
        style="display: none;"
      >
        <div
          class="v-expansion-panel-content__wrap"
        >
          <div
            class="c-collapse-panel__card v-card v-card--flat v-sheet theme--light"
          >
            <div
              class="v-card__text"
            />
          </div>
        </div>
      </div>
    </transition-stub>
  </div>
</div>
`;
